--- a/views/partials/fridge-info.handlebars
+++ b/views/partials/fridge-info.handlebars
@@ -1,17 +1,80 @@
-<div class="flex-1 text-center bg-white px-5 m-2 border rounded">
+<div class="flex-1 text-center bg-gray-400 px-5 py-5 m-2 rounded" id="item-id" data-id="{{id}}">
     <div class="items-center">
         <div class="m-4">
-            <h2 class="pacifico capitalize text-lg text-dark-blue ">{{item_name}}</h2>
+            <h2 class="pacifico capitalize text-lg text-blue-light">{{item_name}}</h2>
             <div class="number-input">
-                <p class="text-sm text-dark-blue">Quantity: </p>
-                <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()" ><i class="fas fa-minus"></i></button>
-                <input class="quantity" min="1" name="quantity" value="{{quantity}}" type="number" />
+                <p class="text-sm text-blue-light">Quantity: </p>
+                <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"><i class="fas fa-minus"></i></button>
+                <input class="quantity rounded-lg bg-blue-light" min="1" name="quantity" value="{{quantity}}" type="number" />
                 <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus"><i class="fas fa-plus"></i></button>
             </div>
             {{#if expiration_date}}
-            <p class="text-sm text-dark-blue">Expires: {{expiration_date}}</p>
+            <p class="text-sm text-blue-light">Expires: {{format_date expiration_date}}</p>
             {{/if}}
-            <button class="bg-blue-100 hover:bg-blue-200 font-bold py-2 px-4 rounded-lg pacifico text-dark-blue text-sm">Delete <i class="ml-2 fas fa-trash-alt"></i></button>
+            <input type="button" onclick="removeDiv(this)" id="delete-item-btn" class="bg-blue-100 hover:bg-blue-200 font-bold py-2 px-4 rounded-lg pacifico text-dark-blue text-sm"> Delete <i class="ml-2 fas fa-trash-alt"></i></button>
         </div>
     </div>
 </div>
+
+<script>
+    <script src="/javascript/edit-item.js"></script>
+</script>
+
+
+<script>
+// Delete Button function
+async function removeDiv(btnstate) {
+  var eDiv = document.getElementById("item-id")
+  eDiv.parentNode.removeChild(eDiv)
+} 
+//Fetch Delete function
+document.getElementById("delete-item-btn").addEventListener("click", newFormHandler);
+async function newFormHandler(event) {
+  event.preventDefault();
+
+ let delButtonIsPressed = event.target.className === "delete-item-btn"
+
+if (delButtonIsPressed) {
+  let id = event.target.parentElement.dataset.id
+  fetch(`http://localhost:3001/api/inventory/${id}`, {
+    method: 'DELETE',
+    headers: {
+      "Content-Type": "application/json",
+    },
+  })
+  .then(response => response.json())
+  }
+}
+</script>
+
+<script>
+document.querySelector("plus").addEventListener("click", newFormHandler);
+async function newFormHandler(event) {
+    event.preventDefault();
+  
+    const item_name = document.querySelector('input[name="item_name"]').value.trim;
+    const quantity = document.querySelector('input[name="new_quantity"]').value.trim;
+    const category_id = document.querySelector('select[name="category_name"]').value.trim;
+  
+    const response = await fetch(`http://localhost:3001/api/inventory/`, {
+      method: "PATCH",
+      body: JSON.stringify(patch, {
+        name: item_name,
+        quantity: quantity,
+        categoryid: category_id,
+
+      }),
+      headers: {
+        "Content-Type": "application/merge-patch+json",
+      },
+    });
+    
+    if (response.ok) {
+      document.location.reload();
+    } else {
+      alert(response.statusText);
+    }
+  };
+  
+   
+</script>
