--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -64,6 +64,11 @@
 
         <div class="category-buttons">
             <h6 class="pacifico text-lg text-dark-blue">Filter by Category</h6>
+             <button type="button" id="all" name="category_name"
+                    class="pacifico mt-3 w-full inline-flex justify-center pacifico text-blue-light text-sm p-1.5 mt-2 bg-dark-blue hover:bg-blue focus:outline-none focus:ring-2 focus:ring-opacity-50 rounded-lg"
+                    value="0">
+                    All
+                </button>
                 <button type="button" id="fruit" name="category_name"
                     class="pacifico mt-3 w-full inline-flex justify-center pacifico text-blue-light text-sm p-1.5 mt-2 bg-dark-blue hover:bg-blue focus:outline-none focus:ring-2 focus:ring-opacity-50 rounded-lg"
                     value="1">
