--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
     <title>Fridge Friend</title>
     <link rel="stylesheet" href="/stylesheets/production_style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+    {{!-- <link rel="stylesheet" href="/stylesheets/style.css" /> --}}
     <link rel="icon" type="image/png" href="/images/fridge.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
