--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,28 +23,21 @@
         {{{ body }}}
     </main>
 
-    <footer>
-
-    </footer>
     <!--Toast Alert -->
-    <div class="hidden alert-toast fixed bottom-0 right-0 m-8 w-5/6 md:w-full max-w-sm">
+    <div class="hidden alert-toast fixed bottom-0 right-0 m-8 w-5/6 md:w-full max-w-sm z-50" id="alert-toast">
         <input type="checkbox" class="hidden" id="footertoast">
         <label class="close cursor-pointer flex items-center justify-between w-full p-2 bg-red-500 h-14 rounded shadow-lg text-white" title="close" for="footertoast">
-            <span><i class="fas fa-bell mx-3"></i><b class="mr-2">Alert!</b>content of the alert</span>
+            <span><i class="fas fa-bell mx-3"></i><b class="mr-2">Alert!</b><span id="toast-content">content of the alert</span></span>
             <svg class="fill-current text-white" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
                 <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"></path>
             </svg>
         </label>
     </div>
-    {{!-- {{#if loggedIn}} --}}
-    <script src="/javascript/logout.js"></script>
-    {{!-- {{/if}} --}}
 
+    <script src="/javascript/logout.js"></script>
     <script src ="/javascript/modal.js"></script>
     <script src="/javascript/login.js"></script>
     <script src="tailwind.config.js"></script>
-
-
 </body>
 
 </html>
