--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,8 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fridge Friend</title>
     <link rel="stylesheet" href="/stylesheets/production_style.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
-    {{!-- <link rel="stylesheet" href="/stylesheets/style.css" /> --}}
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+        integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
+    {{!--
+    <link rel="stylesheet" href="/stylesheets/style.css" /> --}}
     <link rel="icon" type="image/png" href="/images/fridge.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -27,12 +29,17 @@
 
     </footer>
     <!--Toast Alert -->
-    <div class="hidden alert-toast fixed bottom-0 right-0 m-8 w-5/6 md:w-full max-w-sm">
+    <div class="hidden alert-toast fixed bottom-0 right-0 m-8 w-5/6 md:w-full max-w-sm" id="alert-toast">
         <input type="checkbox" class="hidden" id="footertoast">
-        <label class="close cursor-pointer flex items-center justify-between w-full p-2 bg-red-500 h-14 rounded shadow-lg text-white" title="close" for="footertoast">
-            <span><i class="fas fa-bell mx-3"></i><b class="mr-2">Alert!</b>content of the alert</span>
-            <svg class="fill-current text-white" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
-                <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"></path>
+        <label
+            class="close cursor-pointer flex items-center justify-between w-full p-2 bg-red-500 h-14 rounded shadow-lg text-white"
+            title="close" for="footertoast">
+            <span><i class="fas fa-bell mx-3"></i><b class="mr-2">Alert!</b><span id="toast-content">content of the alert</span></span>
+            <svg class="fill-current text-white" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+                viewBox="0 0 18 18">
+                <path
+                    d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z">
+                </path>
             </svg>
         </label>
     </div>
@@ -40,11 +47,11 @@
     <script src="/javascript/logout.js"></script>
     {{!-- {{/if}} --}}
 
-    <script src ="/javascript/modal.js"></script>
+    <script src="/javascript/modal.js"></script>
     <script src="/javascript/login.js"></script>
-   <script src="/javascript/filter.js"></script>
+    <script src="/javascript/filter.js"></script>
     <script src="tailwind.config.js"></script>
-  
+
 
 </body>
 
