--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -50,7 +50,7 @@
     <script src="/javascript/modal.js"></script>
     <script src="/javascript/login.js"></script>
     <script src="/javascript/filter.js"></script>
-    <script src="tailwind.config.js"></script>
+    {{!-- <script src="tailwind.config.js"></script> --}}
 
 
 </body>
