--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<div class="flex flex-wrap">
+<div class="flex-wrap sm:flex">
   <div class="w-1/2 h-screen bg-blue-light">
     {{!-- this is where the icons grid below:--}}
     <div class="h-80 grid grid-rows-3 grid-flow-col gap-10 justify-center mt-16">
@@ -53,13 +53,13 @@
   </div>
 
 {{!-- right half start  --}}
-  <div class="w-1/2 h-screen flex-wrap">
+  <div class="w-1/2 h-screen">
 
     <div class="title mt-16">
       <h1 class="text-5xl text-center text-dark-blue">Fridge Friend</h1>
     </div>
     {{!--form for user LOGIN input --}}
-    <form class="login-form p-10 ml-28 space-y-10">
+    <form class="login-form p-10 space-y-10 ml-28">
       <div>
         <H6 class="pacifico text-sm text-dark-blue pb-3">email</H6>
         <label for="email-login"></label>
