--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -53,26 +53,26 @@
   </div>
 
   {{!-- right half start --}}
-  <div class="lg:w-1/2 lg:h-screen w-full mb-10 md:mb-10">
+  <div class="lg:w-1/2 lg:h-screen w-full mb-10">
 
     <div class="title lg:mt-16 mt-10">
       <h1 class="text-5xl text-center text-dark-blue">Fridge Friend</h1>
     </div>
     {{!--form for user LOGIN input --}}
-    <form class="login-form space-y-10 md:ml-24 lg:ml-16 pt-10 pl-24">
+    <form class="login-form space-y-10 sm:ml-24 md:ml-36 xl:ml-36 ml-24 pt-10">
       <div>
         <H6 class="pacifico text-sm text-dark-blue pb-3">email</H6>
         <br>
         <label for="email-login"></label>
         <input
-          class="shadow-sm border-b-2 border-blue rounded-sm focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg sm:w-96"
+          class="shadow-sm border-b-2 border-blue rounded-sm focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg w-48 sm:w-76 md:w-96"
           type="text" id="email-login" />
       </div>
       <div>
         <H6 class="pacifico text-sm text-dark-blue pb-3">password</H6>
         <label for="password-login"></label>
         <input
-          class="shadow-sm border-b-2 border-blue rounded-sm focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg sm:w-96"
+          class="shadow-sm border-b-2 border-blue rounded-sm focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg w-48 sm:w-76 md:w-96"
           type="password" id="password-login" />
       </div>
       <div>
@@ -83,7 +83,7 @@
     </form>
 
     {{!-- to be rerouted to the signup page --}}
-    <div class="new-user text-sm lg:p-20 text-dark-blue text-center">
+    <div class="new-user text-sm lg:p-20 pt-5 text-dark-blue text-center">
       Are you new to Fridge Friend?
       <br>
       Click <a href="/signup" class="text-pink">here</a> to sign up!
