--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -40,7 +40,7 @@
       </div>
     </div>
 
-    <div class="inset-x-0 md:pb-10">
+    <div class="inset-x-0 lg:p-10">
       {{!-- this is where text will go about the app --}}
       <h1 class="md:pl-10 px-5 text-2xl text-center text-dark-blue mt-16">Keep your fridge contents up to date!</h1>
       <p class="text-center p-5 text-sm text-dark-blue">Welcome to Fridge Friend! Your reliable pal that will
