--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,7 +1,7 @@
-<div class="flex flex-wrap">
-    <div class="w-1/2 h-screen bg-dark-blue">
+<div class="flex-wrap-reverse flex">
+    <div class="lg:w-1/2 w-full bg-dark-blue">
         {{!-- this is where the icons will go --}}
-        <div class="h-80 grid grid-rows-3 grid-flow-col gap-10 justify-center mt-16">
+        <div class="h-80 grid grid-rows-3 grid-flow-col gap-10 justify-center mt-10 px-5">
             <div class="py-2">
                 <img src="/images/fridge friend icons-01.png" width="100px" height="100px" class="bg-red rounded-full">
             </div>
@@ -33,10 +33,10 @@
             </div>
         </div>
 
-        <div class="inset-x-0 bottom-0">
+        <div class="inset-x-0 lg:p-10">
             {{!-- this is where text will go about the app --}}
-            <h1 class="pl-10 text-2xl text-center text-blue-light mt-24">Keep your fridge contents up to date!</h1>
-            <p class="text-center pl-5 pr-5 pt-5 text-sm text-blue-light">Welcome to Fridge Friend! Your reliable pal
+            <h1 class="md:pl-10  text-2xl text-center text-blue-light mt-16">Keep your fridge contents up to date!</h1>
+            <p class="text-center p-5 text-sm text-blue-light">Welcome to Fridge Friend! Your reliable pal
                 that will
                 not only help you keep track of the items in your fridge, but also hit you up when things
                 are about to go expire! As your friend, we are dedicated to helping you reduce waste, and make the most
@@ -48,18 +48,18 @@
     </div>
 
     {{!-- right half start --}}
-    <div class="w-1/2 h-screen flex-wrap">
+    <div class="lg:w-1/2 lg:h-screen w-full mb-10">
 
-        <div class="title mt-16">
+        <div class="title lg:mt-16 mt-10">
             <h1 class="text-5xl text-center text-dark-blue">Fridge Friend</h1>
         </div>
         {{!--form for user SIGNIN input --}}
-        <form class="signup-form p-10 ml-28 space-y-10 md:ml-28">
+        <form class="signup-form space-y-10 sm:ml-24 md:ml-36 xl:ml-36 ml-24 pt-10">
             <div>
                 <H6 class="pacifico text-sm text-dark-blue pb-3">username</H6>
                 <label for="username-signup"></label>
                 <input
-                    class="shadow-sm border-b-2 border-blue rounded-sm focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg w-96"
+                    class="shadow-sm border-b-2 border-blue rounded-sm focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg w-48 sm:w-76 md:w-96"
                     type="text" id="username-signup" />
             </div>
 
@@ -67,14 +67,14 @@
                 <H6 class="pacifico text-sm text-dark-blue pb-3">email</H6>
                 <label for="email-signup"></label>
                 <input
-                    class="shadow-sm border-b-2 border-blue rounded-sm focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg w-96"
+                    class="shadow-sm border-b-2 border-blue rounded-sm focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg w-48 sm:w-76 md:w-96"
                     type="email" id="email-signup" />
             </div>
             <div>
                 <H6 class="pacifico text-sm text-dark-blue pb-3">password</H6>
                 <label for="password-signup"></label>
                 <input
-                    class="shadow-sm border-b-2 border-blue rounded-sm focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg w-96"
+                    class="shadow-sm border-b-2 border-blue rounded-sm focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg w-48 sm:w-76 md:w-96"
                     type="password" id="password-signup" />
             </div>
             <div>
@@ -84,7 +84,7 @@
             </div>
         </form>
 
-        <div class="new-user text-sm p-20 text-dark-blue text-center">
+        <div class="new-user text-sm lg:p-20 pt-5 text-dark-blue text-center">
             Already have an account with us? 
             <br>
             Click <a href="/" class="text-pink">here</a> to login!
